--- a/Air.csproj
+++ b/Air.csproj
@@ -37,27 +37,38 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Threading.Tasks.Dataflow, Version=4.5.9.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Bitbucket\nakack\Src\packages\Microsoft.Tpl.Dataflow.4.5.9\lib\net45\System.Threading.Tasks.Dataflow.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AirConfiguration.cs" />
     <Compile Include="AirContractAttribute.cs" />
+    <Compile Include="AirDirectedEdgeAttribute.cs" />
+    <Compile Include="AirEdgeAttribute.cs" />
     <Compile Include="AirEdgeList.cs" />
+    <Compile Include="AirEntityExtensions.cs" />
     <Compile Include="AirGraphNode.cs" />
     <Compile Include="AirMemberAttribute.cs" />
+    <Compile Include="IAirCommand.cs" />
     <Compile Include="Edge.cs" />
     <Compile Include="AirGraph.cs" />
+    <Compile Include="EdgeDirection.cs" />
+    <Compile Include="IAirCommandProcessor.cs" />
     <Compile Include="IAirEntity.cs" />
+    <Compile Include="IAirIdFactory.cs" />
     <Compile Include="IAirSerialisation.cs" />
     <Compile Include="IAirSerialiser.cs" />
     <Compile Include="IAirStorage.cs" />
     <Compile Include="LocalAirStorage.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProtoAirSerialiser.cs" />
+    <Compile Include="SimpleAirCommandProcessor.cs" />
+    <Compile Include="SimpleAirIdFactory.cs" />
     <Compile Include="SimpleAirSerialisation.cs" />
     <Compile Include="SimpleAirSerialiser.cs" />
   </ItemGroup>
